--- a/index.html
+++ b/index.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <script
+      src="https://kit.fontawesome.com/22a766f977.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
 </head>
 <body>
-   <h1> CLEBAO </h1> 
+    <section class="fundo">
+        <div class="quadro">
+        <div class="foto">
+            <img src="clebao.jpeg" width="100%", height="100%">
+        </div>
+        <br>
+        <p>Renan Gabriel Santos</p>
+        <br>
+        <hr>
+        <div id="social-i">
+            <a href=https://www.instagram.com/renan.gabriel.s><i class="fab fa-instagram fa-9x"></i></a>
+        </div>
+        <div id="social-m">
+            <a href=mailto:renangabrielsantos.santos@gmail.com><i class="far fa-envelope fa-9x"></i></a>
+        </div>
+        <div id="social-l">
+            <a href=https://www.linkedin.com/in/renan-gabriel-santos><i class="fab fa-linkedin fa-9x"></i></a>
+        </div>
+        <div id="social-t">
+            <a href=https://twitter.com/cleberbabaca><i class="fab fa-twitter fa-9x"></i></a>
+        </div>
+
+        </div>
+    </section>
 </body>
 </html>
